Migrate from bootstrap v4 to v5 (#76)
* Initial commit

* Update to Boostrap 5.3.0

* Update to Boostrap 5.3.0
* Update to AutoPrefixer 9.8.8

* Update data-* attribute to bs namspaced

Update Components, TagHelpers and Views:
* data-dismiss => data-bs-dismiss
* data-toggle => dara-bs-toggle
* data-target => date-bs-target
* Update theme-color(...) to scss bootstrap variables
* Update class 'close' to 'btn-close' in modal TagHelpers

* Add class 'form-select' to <select> elements

* Implement changed class and attribute names

Replace css class names:
* left-* => start-*
* right-* => end-*
* *-left => *-start
* *-right => *-end
* ml-* => ms-*
* mr-* => me-*
* pl-* => ps-*
* pr-* => pe-*
* form-group => mb-3
* form-row => row
* font-weight-* => fw-*
* font-style-* => fst-*
* no-gutters => g-0
* embed-responsive => ratio
* embed-responsive-16by9 => ratio-16x9
* badge-primary => bg-primary
* rounded-lg & rounded-sm => rounded-1, rounded-2, rounded-3
* btn-block => d-block w-100
* ustom-check => form-check
* custom-switch => from-switch
* custom-select => form-select
* custom-range => form-range
* custom-control custom-checkbox => form-check
* custom-control custom-radio => form-check
* custom-control-inline => form-check-inline
* custom-control-input => form-check-input
* custom-control-label => form-check-label
* close => btn-close

Data attributes:
* data-dismiss => data-bs-dismiss
* data-ride => data-bs-ride
* data-interval => data-bs-interval
* data-slide => data-bs-slide
* data-target => data-bs-target
* data-toggle => data-bs-toggle

Removed:
* .input-group-append
* .input-group-prepend

Other:
* <select> elements require class="form-select"
* Close buttons: Find &times and remove parent span
* CSS variables: var(--  =>  var(--bs-
* sr-only => visually-hidden
* Navbars now require a container within

* * Continue css styling

* Extract variable definitions to _custom_variables.scss
* _custom.

--- a/League.Demo/Views/Home/AboutLeague.cshtml
+++ b/League.Demo/Views/Home/AboutLeague.cshtml
@@ -1,5 +1,7 @@
 ﻿@using League.Routing
 @using League.Helpers
+@using League.WebApp
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData.Title("About Volleyball League");
 }
@@ -10,12 +12,12 @@
 <div class="mb-0 pb-1">
     <div class="row">
         <article class="col-md-8">
-            <p class="font-weight-bolder text-primary">The Volleyball League Platform brings everything necessary to organize and to run a league.</p>
+            <p class="fw-bolder text-primary">The Volleyball League Platform brings everything necessary to organize and to run a league.</p>
         </article>
     </div>
     <div class="row">
         <article class="col-10 col-sm-8">
-            <h3 class="h3 pl-2 rounded">Features</h3>
+            <h3 class="h3 ps-2 rounded">Features</h3>
             <ul class="fa-ul">
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Indoor and beach leagues</li>
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Registration of teams</li>
@@ -35,7 +37,7 @@
     </div>
     <div class="row">
         <article class="col-8 col-sm-8">
-            <h3 class="h3 pl-2 rounded">Software</h3>
+            <h3 class="h3 ps-2 rounded">Software</h3>
             <ul class="fa-ul">
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Individual settings (e.g. number of records, number of rounds, etc.)</li>
                 <li><span class="fa-li"><i class="fas fa-check-square text-primary"></i></span>Individual pages, e.g. for the game rules</li>
@@ -57,11 +59,12 @@
     <div class="row">
         <article class="col-8">
             @{
-                var leagueAssembly = System.Reflection.Assembly.GetAssembly(typeof(League.LeagueStartup))?.GetName();
-                var tmAssembly = System.Reflection.Assembly.GetAssembly(typeof(TournamentManager.DateTimePeriod))?.GetName();
-                if (leagueAssembly != null && tmAssembly != null)
+                var webAppInfo = new Axuno.Tools.AssemblyInfo(typeof(WebAppStartup));
+                var leagueInfo = new Axuno.Tools.AssemblyInfo(typeof(LeagueStartup));
+                var tmInfo = new Axuno.Tools.AssemblyInfo(typeof(TournamentManager.MultiTenancy.AppDb));
+                if (webAppInfo.Name != null && leagueInfo.Version != null && tmInfo.Name != null && tmInfo.Version != null)
                 {
-                <div>Running @leagueAssembly.Name v@(leagueAssembly.Version) and @tmAssembly.Name v@(tmAssembly.Version)</div>
+                    <div>Running: @(webAppInfo.Product) v@(webAppInfo.Version), @(leagueInfo.Name) v@(leagueInfo.Version) and @(tmInfo.Name) v@(tmInfo.Version)</div>
                 }
             }
         </article>
@@ -70,7 +73,7 @@
 @section styles {
     <style type="text/css">
         .h3 {
-            background: linear-gradient(to right, #018dff 10%, #01df02 100%);
+            background: linear-gradient(to right, var(--bs-primary) 10%, var(--bs-success) 100%);
             color: white;
         }
     </style>
