--- a/League/Views/Account/ExternalSignInConfirmation.cshtml
+++ b/League/Views/Account/ExternalSignInConfirmation.cshtml
@@ -17,7 +17,7 @@
 }
 <h2 class="h2">@(Localizer.GetHtml("Associate your <strong>{0}</strong> account", loginProvider)).</h2>
 <hr />
-<form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ExternalSignInConfirmation)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="col-md-8 col-sm-10 col-12 pl-0" role="form">
+<form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ExternalSignInConfirmation)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="col-md-8 col-sm-10 col-12 ps-0" role="form">
     <site-alert type="Success">
         @(Localizer.GetHtml("You have successfully authenticated with <strong>{0}</strong>", loginProvider)).
     </site-alert>
@@ -27,42 +27,42 @@
     <site-validation-summary show="All">
         <b>@Localizer["Input has some issues"]:</b>
     </site-validation-summary>
-    <div class="form-group">
-        <label asp-for="Email" class="d-block"></label>
-        <div class="font-weight-bolder">@Model.Email</div>
+    <div class="mb-3">
+        <label asp-for="Email" class="d-block form-label"></label>
+        <div class="fw-bolder">@Model.Email</div>
     </div>
-    <div class="form-group">
-        <label asp-for="Gender"></label>
-        <select asp-for="Gender" asp-items="GenderList()" class="custom-select col-md-6"></select>
+    <div class="mb-3">
+        <label asp-for="Gender" class="form-label"></label>
+        <select asp-for="Gender" asp-items="GenderList()" class="form-select col-md-6"></select>
         <span asp-validation-for="Gender" class="text-danger"></span>
     </div>
-    <div class="form-group">
-        <label asp-for="FirstName"></label>
+    <div class="mb-3">
+        <label asp-for="FirstName" class="form-label"></label>
         <input asp-for="FirstName" required="required" class="form-control" />
         <span asp-validation-for="FirstName" class="text-danger"></span>
     </div>
-    <div class="form-group">
-        <label asp-for="LastName"></label>
+    <div class="mb-3">
+        <label asp-for="LastName" class="form-label"></label>
         <input asp-for="LastName" required="required" class="form-control" />
         <span asp-validation-for="LastName" class="text-danger"></span>
     </div>
-    <div class="form-group">
-        <label asp-for="Nickname"></label>
+    <div class="mb-3">
+        <label asp-for="Nickname" class="form-label"></label>
         <input asp-for="Nickname" class="form-control" aria-describedby="nicknameHelpBlock" />
         <span asp-validation-for="Nickname" class="text-danger"></span>
         <small id="nicknameHelpBlock" class="form-text text-muted">
             @Localizer["The name your team mates are using"]
         </small>
     </div>
-    <div class="form-group">
-        <label asp-for="PhoneNumber"></label>
+    <div class="mb-3">
+        <label asp-for="PhoneNumber" class="form-label"></label>
         <input asp-for="PhoneNumber" class="form-control" aria-describedby="phoneNumberHelpBlock" />
         <span asp-validation-for="PhoneNumber" class="text-danger"></span>
         <small id="phoneNumberHelpBlock" class="form-text text-muted">
             @Localizer["Enter your mobile phone number, if applicable"]
         </small>
     </div>
-    <div class="form-group">
+    <div class="mb-3">
         <button type="submit" class="btn btn-lg btn-primary col-10">@Localizer["Associate account"]</button>
     </div>
 </form>
