--- a/League/Views/Shared/Components/MainNavigation/Default.cshtml
+++ b/League/Views/Shared/Components/MainNavigation/Default.cshtml
@@ -1,27 +1,27 @@
 ﻿@model League.Components.MainNavigationComponentModel
 @using League.Components
 
-<ul class="navbar-nav mr-auto mt-2 mt-md-0 w-100" role="menubar">
+<ul class="navbar-nav me-auto mt-2 mt-md-0 w-100" role="menubar">
     @foreach (var node in Model.TopNavigationNodes)
     {
         // Node keys after "RightAlignSeparator" shall be aligned to the right margin of the navigation bar
         if (node.Key.Equals("RightAlignSeparator", StringComparison.InvariantCultureIgnoreCase))
         {
-            ViewData["dropdown-menu-right"] = " dropdown-menu-right"; // for dropdown in NavigationNodeChildDropdownPartial
-            <li class="ml-md-auto"></li>
+            ViewData["dropdown-menu-end"] = " dropdown-menu-end"; // for dropdown in NavigationNodeChildDropdownPartial
+            <li class="ms-md-auto"></li>
         }
 
         if (!node.ShouldShow()) { continue; }
         if (!node.HasVisibleChildNodes())
         {
-            <li class="@Model.GetClass(Context, node, "nav-item", "active", true)">
-                <a class="nav-link" href="@Url.Content(node.Url!)">@Html.Raw(node.GetIcon())@node.Text</a>
+            <li class="nav-item">
+                <a class="@Model.GetClass(Context, node, "nav-link", "active", true)" href="@Url.Content(node.Url!)">@Html.Raw(node.GetIcon())@node.Text</a>
             </li>
         }
         else
         {
-            <li class="@Model.GetClass(Context, node, "nav-item dropdown", "active", true)">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="@Url.Content(node.Url!)" role="button">
+            <li class="nav-item dropdown">
+                <a class="@Model.GetClass(Context, node, "nav-link dropdown-toggle", "active", true)" data-bs-toggle="dropdown" href="@Url.Content(node.Url!)" role="button">
                     @Html.Raw(node.GetIcon())@node.Text
                 </a>
                 <partial name="@League.Views.ViewNames.Shared.NavigationNodeChildDropdownPartial" model="(Model, node)" />
