--- a/League/Styles/bootstrap/_custom.scss
+++ b/League/Styles/bootstrap/_custom.scss
@@ -1,89 +1,9 @@
-// Bootstrap dependencies - javascript and fonts must be copied manually!!
+// Bootstrap dependencies - javascript and fonts must be copied separately
 // font-awesome is included by site.scss
-@import '../../node_modules/tether/src/css/tether.sass';
 
-// Always required for Bootstrap
 @import "node_modules/bootstrap/scss/functions";
+
+@import './custom_variables';
+
 @import "node_modules/bootstrap/scss/variables";
 @import "node_modules/bootstrap/scss/mixins";
-
-// Bootstrap overrides
-//
-// Copy variables from `_variables.scss` to this file to override default values
-// without modifying source files.
-
-//
-// Color system
-//
-
-$white: #fff;
-$gray-100: #f8f9fa;
-$gray-200: #e9ecef;
-$gray-300: #dee2e6;
-$gray-400: #ced4da;
-$gray-500: #adb5bd;
-$gray-600: #868e96;
-$gray-700: #495057;
-$gray-800: #343a40;
-$gray-900: #212529;
-$black: #000;
-
-
-// Reassign color vars to semantic color scheme
-// Bootstrap supplies 3 function to access $theme-colors: $theme-color('key'), color('color-key'), gray($key: "gray-key")
-$theme-colors: ( 'primary': #018DFF, 'secondary': $gray-600, 'success': #01DF02, 'info': #015496, 'warning': #FF8901, 'danger': #E401CD, 'light': $gray-100, 'dark': $gray-800 );
-
-// Dropdowns
-//
-// Dropdown menu container and contents.
-$dropdown-link-hover-bg: transparentize(lighten(theme-color('primary'), 30%), .6);
-
-$dropdown-link-active-color: $black;
-$dropdown-link-active-bg: lighten(theme-color('primary'), 30%);
-
-// Body
-//
-// Settings for the `<body>` element.
-$body-bg: #bcbcbc;
-$body-color: $black;
-
-// Fonts
-//
-// Font, line-height, and color for body text, headings, and more.
-$font-family-sans-serif: Arial, "Helvetica Neue", Helvetica, sans-serif;
-
-// Borders
-$border-radius: 0.4rem;
-
-// Links
-//
-// Style anchor elements.
-
-$link-color: $black;
-$link-decoration: none;
-$link-hover-color: $link-color;
-$link-hover-decoration: underline;
-
-// Forms
-
-//$input-color: theme-color("primary");
-//$input-focus-color: theme-color("primary");
-$input-focus-bg: transparentize(lighten(theme-color('success'), 50%),.5);
-
-
-// Navbar
-$navbar-dark-active-color: $white;
-
-// Navs
-$nav-tabs-border-color: theme-color('success');
-// $nav-tabs-link-hover-border-color: $gray-200 $gray-200 $nav-tabs-border-color !default; // DOES NOT WORK, see hover mix-in
-$nav-tabs-link-active-color: $black;
-$nav-tabs-link-active-bg: lighten(theme-color('success'), 45%);
-$nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-color $nav-tabs-border-color;
-
-// Components
-//
-// Box-Shadow
-$box-shadow-sm: 0 .125rem .25rem rgba($black, .015);
-$box-shadow: 0 .5rem 1rem rgba($black, .30);
-$box-shadow-lg: 0 1rem 3rem rgba($black, .35);
