--- a/League/Styles/site/_std-input.scss
+++ b/League/Styles/site/_std-input.scss
@@ -34,7 +34,7 @@
 // class "input-validation-error" is set programmatically on input fields with errors
 .input-validation-error {
     //font-size: 1rem;
-    border: 2px solid theme-color('danger') !important;
+    border: 2px solid $danger !important;
 }
 
 // used by "asp-validation-for" tag helper
@@ -59,19 +59,14 @@
 * START: Override Bootstrap
 **************************************************************/
 
-.form-control {
-    font-size: 1.25rem;
-    padding: 0.25rem 0.5rem;
+label {
+    font-weight: normal;
+    color: $success;
+    background-color: transparent;
 }
 
-label {
-    //font-size: 1rem;
-    font-weight: normal;
-    color: theme-color('success');
-    background-color: transparent;
-    margin-top: .75rem;
-    margin-bottom: 0rem;
-    display: block;
+.form-control, .form-select {
+    font-size: 1.25rem;
 }
 
 /**************************************************************
@@ -80,6 +75,5 @@ label {
 
 // e.g. <input type="text" required />
 input[type=text]:required, input[type=password] {
-    border-left: .5rem solid theme-color('success');
+    border-left: .5rem solid $success;
 }
-
