--- a/League/Styles/site/site.scss
+++ b/League/Styles/site/site.scss
@@ -5,12 +5,25 @@
 $body-width: 60rem;
 
 body {
+    background-color: $gray-500; /* override $body-bg for just this element */
+}
+
+.form-select:focus {
+    background-color: $input-focus-bg !important;
+}
+
+// Tables
+.table, .table-light {
+    $table-bg: transparent;
+}
+
+body {
     max-width: $body-width;
     margin: 0 auto;
 
     header.site, footer.site {
         margin-top: .3rem;
-        background-color: #e9e9e9;
+        background-color: $gray-200;
     }
 
     header.site {
@@ -32,13 +45,13 @@ body {
         }
 
         span.part1 {
-            background-color: theme-color('info');
+            background-color: $info;
             color: white;
             font-weight: bold !important
         }
 
         span.part2 {
-            background-color: theme-color('success');
+            background-color: $success;
             color: white;
             font-weight: bold !important;
             margin-right: 8px
@@ -76,7 +89,7 @@ body {
 }
 
 #nav-main {
-    background-color: theme-color('primary');
+    background-color: $primary;
     font-size: 1.3rem;
     margin-top: .25rem;
     padding-top: 0;
@@ -95,13 +108,13 @@ a.link:before {
 }
 
 .h1, .h2, .h3, .h4, .h5 {
-    color: theme-color('info');
+    color: $info
 }
 
 hr {
     height: 0;
     border: 0;
-    border-top: 0.1rem solid theme-color('success');
+    border-top: 0.15rem solid $success;
 }
 
 .hr-text {
@@ -113,18 +126,18 @@ hr {
     color: black;
     text-align: center;
     height: 1.5em;
-    //opacity: .5;
+    opacity: 1;
     &:before {
         content: '';
         // use the linear-gradient for the fading effect
         // use a solid background color for a solid bar
         // background: linear-gradient(to right, transparent, #818078, transparent);
-        background: theme-color('success');
+        background: $success;
         position: absolute;
         left: 0;
         top: 50%;
         width: 100%;
-        height: 1px;
+        height: 2px;
     }
 
     &:after {
@@ -135,21 +148,21 @@ hr {
         line-height: 1.5em;
         color: white;
         // this is really the only tricky part, you need to specify the background color of the container element...
-        background-color: theme-color('success');
+        background-color: $success;
     }
 }
 
 fieldset {
     margin: .5rem 0;
     padding: 0 .5rem 1rem .5rem;
-    border: .1rem solid theme-color('primary');
+    border: .1rem solid $primary;
     background-color: $gray-100;
 }
 
 fieldset legend {
     font-size: .9rem;
     color: $white;
-    background-color: theme-color('primary');
+    background-color: $primary;
     padding: 0 .5rem;
 }
 
