--- a/League/Views/Account/Register.cshtml
+++ b/League/Views/Account/Register.cshtml
@@ -19,23 +19,23 @@
     <hr />
 </div>
 <div>
-    <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.Register)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="col-md-8 col-sm-10 col-12 pl-0" role="form">
+    <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.Register)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="col-md-8 col-sm-10 col-12 ps-0" role="form">
         <site-validation-summary show="All">
             <b>@Localizer["Input has some issues"]:</b>
         </site-validation-summary>
         <input asp-for="Code" type="hidden" />
-        <div class="form-group">
-            <label asp-for="Email"></label>
+        <div class="mb-3">
+            <label asp-for="Email" class="form-label"></label>
             <div>
                 <strong>@Model.Email</strong>
             </div>
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="Password"></label>
+        <div class="mb-3">
+            <label asp-for="Password" class="form-label"></label>
             <div class="input-group">
                 <input asp-for="Password" class="form-control" required="required" type="text" aria-describedby="passwordHelpBlock" />
-                <span class="input-group-append input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
                     <i class="fas fa-eye"></i>
                 </span>
             </div>
@@ -44,48 +44,48 @@
                 <partial name="_passwordRules" />
             </small>
         </div>
-        <div class="form-group">
-            <label asp-for="ConfirmPassword"></label>
+        <div class="mb-3">
+            <label asp-for="ConfirmPassword" class="form-label"></label>
             <div class="input-group">
                 <input asp-for="ConfirmPassword" required="required" type="text" class="form-control" />
-                <span class="input-group-append input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
+                <span class="input-group-text" style="cursor: pointer" onclick="Site.ShowHidePassword($(this))">
                     <i class="fas fa-eye"></i>
                 </span>
             </div>
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="Gender"></label>
-            <select asp-for="Gender" asp-items="GenderList()" class="custom-select col-md-6"></select>
+        <div class="mb-3">
+            <label asp-for="Gender" class="form-label"></label>
+            <select asp-for="Gender" asp-items="GenderList()" class="form-select col-md-6"></select>
             <span asp-validation-for="Gender" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="FirstName"></label>
+        <div class="mb-3">
+            <label asp-for="FirstName" class="form-label"></label>
             <input asp-for="FirstName" required="required" class="form-control" />
             <span asp-validation-for="FirstName" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="LastName"></label>
+        <div class="mb-3">
+            <label asp-for="LastName" class="form-label"></label>
             <input asp-for="LastName" required="required" class="form-control" />
             <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="Nickname"></label>
+        <div class="mb-3">
+            <label asp-for="Nickname" class="form-label"></label>
             <input asp-for="Nickname" class="form-control" aria-describedby="nicknameHelpBlock" />
             <span asp-validation-for="Nickname" class="text-danger"></span>
             <small id="nicknameHelpBlock" class="form-text text-muted">
                 @Localizer["The name your team mates are using"]
             </small>
         </div>
-        <div class="form-group">
-            <label asp-for="PhoneNumber"></label>
+        <div class="mb-3">
+            <label asp-for="PhoneNumber" class="form-label"></label>
             <input asp-for="PhoneNumber" class="form-control" aria-describedby="phoneNumberHelpBlock" />
             <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             <small id="phoneNumberHelpBlock" class="form-text text-muted">
                 @Localizer["Enter your mobile phone number, if applicable"]
             </small>
         </div>
-        <div class="form-group">
+        <div class="mb-3">
             <button type="submit" class="btn btn-lg btn-primary col-10">@Localizer["Create account"]</button>
         </div>
     </form>
