--- a/League/Views/Match/Results.cshtml
+++ b/League/Views/Match/Results.cshtml
@@ -41,7 +41,7 @@
         @foreach (var r in rounds)
         {
             <li class="nav-item">
-                <a class="nav-link py-1@{if (r.RoundId == activeRoundId){<text> active</text>}}" id="tab-link-@(r.RoundId)" data-toggle="tab" href="#tab-@(r.RoundId)" role="tab" aria-controls="@r.RoundDescription" aria-selected="@(r.RoundId == activeRoundId ? "true" : "false")">@r.RoundDescription</a>
+                <a class="nav-link py-1@{if (r.RoundId == activeRoundId){<text> active</text>}}" id="tab-link-@(r.RoundId)" data-bs-toggle="tab" href="#tab-@(r.RoundId)" role="tab" aria-controls="@r.RoundDescription" aria-selected="@(r.RoundId == activeRoundId ? "true" : "false")">@r.RoundDescription</a>
             </li>
         }
     </ul>
@@ -50,12 +50,12 @@
         {
             <div class="tab-pane@{if (r.RoundId == activeRoundId) {<text> show active</text>}}" id="tab-@(r.RoundId)" role="tabpanel" aria-labelledby="@r.RoundDescription-tab">
                 <div class="text-success">@r.RoundTypeDescription</div>
-                <div id="team-filter-@r.RoundId" class="team-filter my-2 d-none" data-toggle="tooltip" title="@Localizer["Remove filter for team"]" tabindex="0">
-                    <i class="fas fa-1x fa-times-circle mr-2"></i>
-                    <span class="badge badge-dark"></span>
+                <div id="team-filter-@r.RoundId" class="team-filter my-2 d-none" data-bs-toggle="tooltip" title="@Localizer["Remove filter for team"]" tabindex="0">
+                    <i class="fas fa-1x fa-times-circle me-2"></i>
+                    <span class="badge bg-dark"></span>
                 </div>
                 <div class="rounded table-responsive" style="min-height: 13rem">@* min height assures dropdowns are not clipped *@
-                    <table class="table table-sm table-light table-bordered table">
+                    <table class="table table-sm">
                         <thead class="rounded">
                             @{
                                 var columnCount = 6 + maxNumOfSets;
@@ -63,14 +63,14 @@
                             <tr>
                                 <th class="opponents">@Localizer["Opponents"]</th>
                                 <th class="date">@Localizer["Date"]</th>
-                                <th class="result" data-toggle="tooltip" title="@Localizer["Match Points"]">@Localizer["MP"]</th>
-                                <th class="result" data-toggle="tooltip" title="@Localizer["Set Points"]">@Localizer["SP"]</th>
-                                <th class="result" data-toggle="tooltip" title="@Localizer["Ball Points"]">@Localizer["BP"]</th>
+                                <th class="result" data-bs-toggle="tooltip" title="@Localizer["Match Points"]">@Localizer["MP"]</th>
+                                <th class="result" data-bs-toggle="tooltip" title="@Localizer["Set Points"]">@Localizer["SP"]</th>
+                                <th class="result" data-bs-toggle="tooltip" title="@Localizer["Ball Points"]">@Localizer["BP"]</th>
                                 @for (var i = 0; i < maxNumOfSets; i++)
                                 {
-                                    <th class="result" data-toggle="tooltip" title="@Localizer["Set {0}", i + 1]: @Localizer["Ball Points"]">@Localizer["S"]@(i + 1)</th>
+                                    <th class="result" data-bs-toggle="tooltip" title="@Localizer["Set {0}", i + 1]: @Localizer["Ball Points"]">@Localizer["S"]@(i + 1)</th>
                                 }
-                                <th class="context-menu" data-toggle="tooltip" title="@Localizer["Menu"]"><i class="fas fa-ellipsis-v"></i></th>
+                                <th class="context-menu" data-bs-toggle="tooltip" title="@Localizer["Menu"]"><i class="fas fa-ellipsis-v"></i></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -84,7 +84,7 @@
                                     var match = matches[i];
                                     if (legs.Count >= 1 && !string.IsNullOrWhiteSpace(match.RoundLegDescription) && (i == 0 || match.RoundLegSequenceNo != matches[i - 1].RoundLegSequenceNo))
                                     {
-                                        <tr><td colspan="@columnCount" class="leg-change"><span class="badge badge-dark">@match.RoundLegDescription</span></td></tr>
+                                        <tr><td colspan="@columnCount" class="leg-change"><span class="badge bg-dark">@match.RoundLegDescription</span></td></tr>
                                     }
                                     <tr>
                                         <td class="opponents@(Model.MatchResultMessage?.MatchId == match.Id ? " changed-result" : string.Empty)">
@@ -136,7 +136,7 @@
                                         }
                                         <td class="context-menu">
                                             <div class="dropdown text-center">
-                                                <a href="#" class="stretched-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                <a href="#" class="stretched-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                     <i class="fas fa-ellipsis-v" style="font-size: .8rem"></i>
                                                 </a>
                                                 <div class="dropdown-menu shadow" role="menu">
@@ -148,7 +148,7 @@
                                                 </div>
                                             </div>
                                             <div class="dropdown">
-                                                <a href="#" class="stretched-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                <a href="#" class="stretched-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                     <i class="fas fa-ellipsis-v" style="font-size: .8rem"></i>
                                                 </a>
                                                 <div class="dropdown-menu shadow" role="menu" aria-labelledby="dropdownMenuLink">
@@ -188,10 +188,10 @@
         var opponentsCssClass = $".opponents {{width: {opponentColWidth}%);}}";
     }
     <style type="text/css">
-        #round-tabs .nav-link:not(.active) {border:solid 1px lightgray;}
-        #match-results table tbody tr {border-bottom: solid 2px lightgray}
-        #match-results table thead {background-color: lightgray}
-        .changed-result { font-weight: bold; border-left: solid 8px lightgray !important}
+        #round-tabs .nav-link:not(.active) {border:solid 1px var(--bs-gray-500)}
+        #match-results table tbody tr {border-bottom: solid 2px var(--bs-gray-300)}
+        #match-results table thead {--bs-table-bg: var(--bs-gray-300)}
+        .changed-result { font-weight: bold; border-left: solid 8px var(--bs-gray-300) !important}
         .team-filter { cursor: pointer;}
         .filter-link { /* javascript only */ }
         .leg-change { padding: 0; margin:0}
@@ -213,7 +213,7 @@
         var useRecentRoundCookie = @useRecentRoundCookie.ToString().ToLowerInvariant();
         Cookies = window.Cookies; @* js-cookies.js *@
         $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
+            $('[data-bs-toggle="tooltip"]').tooltip();
             @* Try to set the active tab from a cookie *@
             if (useRecentRoundCookie) {
                 var $activeRoundFromCookie = Cookies.get(mostRecentRoundCookieName);
@@ -260,7 +260,7 @@
                     $(this).parent().find('table').find('tbody').find('tr:odd:not(:has(td.leg-change))').addClass('odd');
                     *@
                 });
-            $('a[data-toggle="tab"]').on('shown.bs.tab',
+            $('a[data-bs-toggle="tab"]').on('shown.bs.tab',
                 function(e) {
                     var id = e.target.id.replace('tab-link-', ''); // newly activated tab with round id
                     Cookies.set(mostRecentRoundCookieName,
