--- a/League/Views/Ranking/Table.cshtml
+++ b/League/Views/Ranking/Table.cshtml
@@ -46,7 +46,7 @@
         @foreach (var r in rounds)
         {
             <li class="nav-item">
-                <a class="nav-link py-1@{if (r.RoundId == activeRoundId){<text> active</text>}}" id="tab-link-@(r.RoundId)" data-toggle="tab" href="#tab-@(r.RoundId)" role="tab" aria-controls="@r.RoundDescription" aria-selected="@(r.RoundId == activeRoundId ? "true" : "false")">@r.RoundDescription</a>
+                <a class="nav-link py-1@{if (r.RoundId == activeRoundId){<text> active</text>}}" id="tab-link-@(r.RoundId)" data-bs-toggle="tab" href="#tab-@(r.RoundId)" role="tab" aria-controls="@r.RoundDescription" aria-selected="@(r.RoundId == activeRoundId ? "true" : "false")">@r.RoundDescription</a>
             </li>
         }
     </ul>
@@ -56,7 +56,7 @@
             <div class="tab-pane@{if (r.RoundId == activeRoundId) {<text> show active</text>}}" id="tab-@(r.RoundId)" role="tabpanel" aria-labelledby="@r.RoundDescription-tab">
                 <div class="text-success">@r.RoundTypeDescription</div>
                 <div class="rounded table-responsive">
-                    <table class="table table-sm table-light table-bordered table">
+                    <table class="table table-sm">
                         <thead class="rounded">
                             <tr>
                                 <th class="rank">@Localizer["Rank"]</th>
@@ -76,7 +76,7 @@
                                     <div>@Localizer["Ball"]</div>
                                     <div>@Localizer["Pts."]</div>
                                 </th>
-                                <th class="matches font-weight-light" data-toggle="tooltip" title="@Localizer["Matches played / to play"]">
+                                <th class="matches font-weight-light" data-bs-toggle="tooltip" title="@Localizer["Matches played / to play"]">
                                     <i class="fas fa-circle"></i>/<i class="far fa-circle"></i>
                                 </th>
                             </tr>
@@ -90,7 +90,7 @@
                                     var bgColor = i < rankBgColors.Count ? ToColor(rankBgColors[i]) : Color.Gray;
                                     var rankRow = rankingList[i];
                                     <tr>
-                                        <td class="rank">@rankRow.Rank <span class="badge badge-pill" style="font-size: .7rem; background-color: rgba(@bgColor.R, @bgColor.G, @bgColor.B, @bgColor.A)">&nbsp;</span></td>
+                                        <td class="rank">@rankRow.Rank <span class="badge rounded-pill" style="font-size: .7rem; background-color: rgba(@bgColor.R, @bgColor.G, @bgColor.B, @bgColor.A)">&nbsp;</span></td>
                                         <td class="team">
                                             <div class="text-truncate">@rankRow.TeamNameForRound</div>
                                             <div class="text-truncate">@rankRow.ClubName</div>
@@ -114,11 +114,11 @@
                         Model.RankingList.Where(m => m.RoundId == r.RoundId).Max(m => m.ValuationDate))!;
                 }
                 @{
-                    if (Model.ChartFileInfos.ContainsKey(r.RoundId))
+                    if (Model.ChartFileInfos.TryGetValue(r.RoundId, out var info))
                     {
                         <figure>
                             <h5 class="h5">@Localizer["Ranking History"]</h5>
-                            <img src="@Url.Content($"~/{RankingUpdateTask.RankingImageFolder}/{Model.ChartFileInfos[r.RoundId].Name}")" class="img-fluid" alt="@Localizer["Ranking History"] @r.RoundDescription"/>
+                            <img src="@Url.Content($"~/{RankingUpdateTask.RankingImageFolder}/{info.Name}")" class="img-fluid" alt="@Localizer["Ranking History"] @r.RoundDescription"/>
                             <figcaption class="small">R = @Localizer["Rank"], MD = @Localizer["Match Days"] (@Localizer["until"] @zonedMaxMatchDate.DateTimeOffset.DateTime.ToShortDateString())</figcaption>
                         </figure>
                     }
@@ -140,9 +140,9 @@
         var teamColWidth = 100 - rankColWidth - matchesColWidth - 3 * resultColWidth;
     }
     <style type="text/css">
-        #round-tabs .nav-link:not(.active) {border:solid 1px lightgray;}
-        #ranking-table table tbody tr {border-bottom: solid 2px lightgray}
-        #ranking-table table thead {background-color: lightgray}
+        #round-tabs .nav-link:not(.active) {border:solid 1px var(--bs-gray-500)}
+        #ranking-table table tbody tr {border-bottom: solid 2px var(--bs-gray-300)}
+        #ranking-table table thead {--bs-table-bg: var(--bs-gray-300)}
         .rank { width: @(rankColWidth)%; text-align: center}
         .matches { width: @(matchesColWidth)%; text-align: center; white-space: nowrap;}
         .team {width:@(teamColWidth)%}
@@ -159,7 +159,7 @@
         var useRecentRoundCookie = @useRecentRoundCookie.ToString().ToLowerInvariant();
         Cookies = window.Cookies; @* js-cookies.js *@
         $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
+            $('[data-bs-toggle="tooltip"]').tooltip();
             @* Try to set the active tab from a cookie *@
             if (useRecentRoundCookie) {
                 var $activeRoundFromCookie = Cookies.get(mostRecentRoundCookieName);
@@ -170,7 +170,7 @@
                     $('#round-tabs li:first-child a').tab('show');
                 }
             }
-            $('a[data-toggle="tab"]').on('shown.bs.tab',
+            $('a[data-bs-toggle="tab"]').on('shown.bs.tab',
                 function(e) {
                     var id = e.target.id.replace('tab-link-', ''); // newly activated tab with round id
                     Cookies.set(mostRecentRoundCookieName,
