--- a/League/Views/Shared/_Layout.cshtml
+++ b/League/Views/Shared/_Layout.cshtml
@@ -29,28 +29,31 @@
     @await RenderSectionAsync("styles", required: false)
 </head>
 <body>
-    <header class="rounded site">
-        <div class="d-flex flex-column flex-md-row justify-content-between h-100">
-            <div class="my-auto order-2 order-md-1">
-                <h1 class="h4 header-organization">@(TenantContext.IsDefault ? Localizer["Volleyball League"].Value : TenantContext.OrganizationContext.Name)</h1>
-            </div>
-            <div class="my-auto order-1 order-md-2 text-md-right header-logo">
-                <a class="d-block" href="/" style="text-decoration: none">
-                    <span class="d-inline-block part1">volleyball-liga</span>
-                    <span class="d-inline-block part2">.de</span>
-                    <img class="d-none d-md-inline-block" src="@Url.Content("~/images/logo-volleyball-league.svg")" alt="Logo" height="50"/>
-                </a>
-            </div>
+<header class="rounded site">
+    <div class="d-flex flex-column flex-md-row justify-content-between h-100">
+        <div class="my-auto order-2 order-md-1">
+            <h1 class="h4 header-organization">@(TenantContext.IsDefault ? Localizer["Volleyball League"].Value : TenantContext.OrganizationContext.Name)</h1>
         </div>
-    </header>
-    <nav id="nav-main" class="navbar navbar-expand-md navbar-dark rounded pl-2 site-sticky-top">
-        @* bootstrap 4 class "sticky-top" interferes with modal, that's why we use our identical "site-sticky-top" *@
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div id="navbar-header" class="collapse navbar-collapse">
+        <div class="my-auto order-1 order-md-2 text-md-end header-logo">
+            <a class="d-block" href="/" style="text-decoration: none">
+                <span class="d-inline-block part1">volleyball-liga</span>
+                <span class="d-inline-block part2">.de</span>
+                <img class="d-none d-md-inline-block" src="@Url.Content("~/images/logo-volleyball-league.svg")" alt="Logo" height="50"/>
+            </a>
+        </div>
+    </div>
+</header>
+
+    <nav id="nav-main" class="navbar navbar-expand-md navbar-dark rounded ps-2 site-sticky-top">
+        @* bootstrap class "sticky-top" interferes with modal, that's why we use our identical "site-sticky-top" *@
+        <div class="container-fluid ps-0">
             @* <a class="navbar-brand" href="#">axuno</a>*@
-            @await (Component.InvokeAsync<League.Components.MainNavigation>())
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu-items" aria-controls="navbar-menu-items" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div id="navbar-menu-items" class="collapse navbar-collapse">
+                @(await Component.InvokeAsync<League.Components.MainNavigation>())
+            </div>
         </div>
     </nav>
     <div id="content" class="container-fluid rounded pb-1">
@@ -62,11 +65,11 @@
                 @{
                     if (TenantContext.IsDefault)
                     {
-                        <a asp-route="@RouteNames.GeneralContact" class="d-inline-block mr-4">@Localizer["Contact"]</a>
+                        <a asp-route="@RouteNames.GeneralContact" class="d-inline-block me-4">@Localizer["Contact"]</a>
                     }
                     else
                     {
-                        <a asp-route="@RouteNames.TenantContact" asp-route-tenant="@TenantContext.SiteContext.UrlSegmentValue" class="d-inline-block mr-4">@Localizer["Contact"]</a>
+                        <a asp-route="@RouteNames.TenantContact" asp-route-tenant="@TenantContext.SiteContext.UrlSegmentValue" class="d-inline-block me-4">@Localizer["Contact"]</a>
                     }
                 }
             </div>
