--- a/League/Views/Team/List.cshtml
+++ b/League/Views/Team/List.cshtml
@@ -33,7 +33,7 @@
         @foreach (var r in rounds)
         {
             <li class="nav-item">
-                <a class="nav-link py-1@{if (r.RoundId == activeRoundId){<text> active</text>}}" id="tab-link-@(r.RoundId)" data-toggle="tab" href="#tab-@(r.RoundId)" role="tab" aria-controls="@r.RoundDescription" aria-selected="@(r.RoundId == activeRoundId ? "true" : "false")">@r.RoundDescription</a>
+                <a class="nav-link py-1@{if (r.RoundId == activeRoundId){<text> active</text>}}" id="tab-link-@(r.RoundId)" data-bs-toggle="tab" href="#tab-@(r.RoundId)" role="tab" aria-controls="@r.RoundDescription" aria-selected="@(r.RoundId == activeRoundId ? "true" : "false")">@r.RoundDescription</a>
             </li>
         }
     </ul>
@@ -43,7 +43,7 @@
             <div class="tab-pane@{if (r.RoundId == activeRoundId){<text> show active</text>}}" id="tab-@(r.RoundId)" role="tabpanel" aria-labelledby="@r.RoundDescription-tab">
                 <div class="text-success">@r.RoundTypeDescription</div>
                 <div id="team-list" class="rounded table-responsive">
-                    <table class="table table-sm table-light table-bordered table">
+                    <table class="table table-sm">
                         <thead class="rounded">
                             <tr>
                                 <th>@Localizer["Team"]</th>
@@ -80,16 +80,16 @@
 {
     <style type="text/css">
         #round-tabs .nav-link:not(.active) {
-            border: solid 1px lightgray;
+            border: solid 1px var(--bs-gray-500);
+            border-bottom: solid 1px var(--bs-nav-tabs-link-active-border-color)
         }
-
         #team-list table tbody tr {
-            border-bottom: solid 2px lightgray;
+            border-bottom: solid 2px var(--bs-gray-300);
             cursor: pointer
         }
 
         #team-list table thead {
-            background-color: lightgray
+            --bs-table-bg: var(--bs-gray-300);
         }
 
         #team-list th:first-child, #team-list td:first-child {
@@ -113,7 +113,7 @@
         var useRecentRoundCookie = @useRecentRoundCookie.ToString().ToLowerInvariant();
         Cookies = window.Cookies; @* js-cookies.js *@
         $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
+            $('[data-bs-toggle="tooltip"]').tooltip();
             @* Try to set the active tab from a cookie *@
             if (useRecentRoundCookie) {
                 var $activeRoundFromCookie = Cookies.get(mostRecentRoundCookieName);
@@ -132,7 +132,7 @@
                     if(href) window.location = href;
                 });
 
-            $('a[data-toggle="tab"]').on('shown.bs.tab',
+            $('a[data-bs-toggle="tab"]').on('shown.bs.tab',
                 function(e) {
                     var id = e.target.id.replace('tab-link-', ''); // newly activated tab with round id
                     Cookies.set(mostRecentRoundCookieName,
